--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "web3": "^0.20.6",
     "openzeppelin-solidity": "^1.11.0",
     "zeppelin-solidity": "1.8.0"
   },
